relative img src

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
       		</div><!-- End .secondary-content -->
       <div class="group secondary-content">
         <div class="weather">
-          <img src="../img/sunset.jpg" alt="Sunset Mountains">
+          <img src="img/sunset.jpg" alt="Sunset Mountains">
           <h3>Dress for the Weather</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet risus mauris, aliquam maximus nisi sollicitudin in. Proin et justo non felis lobortis rhoncus. Duis accumsan suscipit sem, in finibus ex semper vel.
           </p>
         </div>
         <div class="buffet">
-          <img src="../img/buffet.jpg" alt="Outdoor Buffet" class="buffet-img">
+          <img src="img/buffet.jpg" alt="Outdoor Buffet" class="buffet-img">
           <h3>All You Can Eat Buffet</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet risus mauris, aliquam maximus nisi sollicitudin in. Proin et justo non felis lobortis rhoncus. Duis accumsan suscipit sem, in finibus ex semper vel.
