Added Wildlife Subpage
Added a subpage "Wildlife".
Adjusted some css properties.
Created a seperate css for the subpage to recreate it from scratch.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Lake Tahoe</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <meta charset="utf-8"/>
   </head>
   <body>
     <header id="top" class="main-header">
@@ -17,7 +18,7 @@
 			<p class="intro" id="intro">
 				Lake Tahoe is one of the most breathtaking attractions located in California. It's home to a number of ski resorts, summer outdoor recreation, and tourist attractions. Snow and skiing are a significant part of the area's reputation.
 			</p>
-			<a class="callout" href="#more">Find out more</a>
+			<a class="callout" href="#secondary-content">Find out more</a>
 
       <div class="wildlife">
         <h2>Check out all the Wildlife</h2>
@@ -26,10 +27,10 @@
         </p>
       </div><!-- End .wildlife -->
 
-			<a class="callout" href="#wildlife">See the Wildlife</a>
+			<a class="callout" href="wildlife.html">See the Wildlife</a>
 		</div><!-- End .primary-content -->
 
-		<div class="secondary-content t-border group">
+		<div class="secondary-content t-border group" id="secondary-content">
       <div class="resorts">
         <img src="img/resort.jpg" alt="Resort">
         <h3>From Tents to Resorts</h3>
